DuPont DevSB/src/objects/eWarrantyMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This helps in mapping fields when an new account or contact is added for eWarranty.</description>
    <fields>
        <fullName>Account_Currency__c</fullName>
        <label>Account Currency</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Application_2__c</fullName>
        <label>Application_2</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Id__c</fullName>
        <label>Campaign_Id</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Entitlement_Type__c</fullName>
        <label>Entitlement_Type</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Info_link__c</fullName>
        <label>Info link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Optional_CampaignId__c</fullName>
        <label>Optional CampaignId</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owning_Organization__c</fullName>
        <label>Owning Organization</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_2__c</fullName>
        <label>Product_2</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Qualification_Program_ID__c</fullName>
        <description>This field will contain ID of the initiative &quot;BI-EMEA eWarranty Dealers&quot;</description>
        <label>Qualification Program ID</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RecordType_Account__c</fullName>
        <label>RecordType_Account</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RecordType_Contact__c</fullName>
        <label>RecordType_Contact</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <label>Subtype</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>homePage_link__c</fullName>
        <label>homePage_link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>termsConditions_link__c</fullName>
        <label>termsConditions_link</label>
        <type>Url</type>
    </fields>
    <label>eWarranty Mapping</label>
</CustomObject>